--- a/public/index.html
+++ b/public/index.html
@@ -52,13 +52,13 @@
         INFECTED: <span id="infected">0</span> • DEATHS:
         <span id="deaths">0</span> • RECOVERED: <span id="recovered">0</span>
       </div>
-      <div style="margin-top: 5px;">
+      <div style="margin-top: 5px;">Made with &#10084; by 
         <a
-          href="https://github.com/sorxrob/covid-3d"
+          href="https://github.com/mdazlaanzubair"
           rel="noopener noreferrer"
           target="_BLANK"
-          style="color: #ffffff; text-decoration: none;"
-          >More Information</a
+          style="color: #ff0000; text-decoration: none;"
+          >Azlaan</a
         >
       </div>
     </div>
