--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
       rel="stylesheet"
     />
     <meta property="og:image" content="https://i.imgur.com/1AFEXhs.png" />
-    <title>COVID-19 3D</title>
+    <title>3D Globe - MD Azlaan</title>
     <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <div id="globeViz"></div>
     <div class="top-info-container">
-      <div class="title">COVID-19</div>
+      <div class="title">COVID-19 - GIS</div>
       <div class="title-desc">
         Loading countries affected by the virus...
       </div>
